[package]
name = "comment_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

chrono = { workspace = true }
moka = { workspace = true }
async-trait = { workspace = true }
static_assertions = { workspace = true }

fofo_utils = { workspace = true }
shared_core = { workspace = true }
channel_cache = { workspace = true }