[package]
name = "fofo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.6"
actix-files = "0.6"
actix-multipart = "0.6"
actix-governor = "0.4.1"
tracing-actix-web = "0.7"

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

chrono = { workspace = true }
moka = { workspace = true }
async-trait = { workspace = true }
static_assertions = { workspace = true }

fofo_utils = { workspace = true }
shared_core = { workspace = true }
category_system = { workspace = true }
group_system = { workspace = true }
post_system = { workspace = true }
comment_system = { workspace = true }
user_system = { workspace = true }
vertification_system = { workspace = true }
notification_system = { workspace = true }
like_system = { workspace = true }
storage = { workspace = true }
lazy_static = { workspace = true }
fancy-regex = { workspace = true }